# oral-times-tables-quiz

./: .clang-tidy  .gitignore  .qmlformat.ini  CMakeLists.txt  README.md
doc/: quiz-state-machine.drawio
hooks/: pre-commit
include/TimesTables/: factor_range.hpp  question.hpp  quiz.hpp
include/TtsModule/: quiz_translator.hpp  tts_language_settings.hpp  tts_rate_settings.hpp  tts_settings.hpp
include/timestables/: factor_range.hpp  placeholder.hpp  question.hpp  quiz.hpp  quiz_settings.hpp
include/timestables/i18n/: messages.pot
include/timestables/i18n/de/LC_MESSAGES/: de.po  messages.mo
include/timestables/i18n/en/LC_MESSAGES/: en.po  messages.mo
include/tts/: abstract_translator.hpp  abstract_tts_settings.hpp  auto_locale.hpp  auto_locale_descriptor.hpp  boost_language.hpp  boost_locale.hpp  boost_territory.hpp  boost_translation_dir.hpp  boost_translator.hpp  locale_descriptor.hpp  qt_language.hpp  qt_locale.hpp  qt_territory.hpp  qt_translator.hpp  quiz_translator.hpp  self_updating_translator.hpp  translation_resources.hpp  translator.hpp  translator_resources.hpp  translator_updater.hpp  tts_language_settings.hpp  tts_rate_settings.hpp  tts_settings.hpp
src/OttqApp/: CMakeLists.txt  Main.qml  QuizView.qml  SettingsView.qml  SetupView.qml  backend.cpp  backend.hpp  language_name.hpp  main.cpp  quiz_backend.cpp  quiz_backend.hpp  quiz_configuration.hpp  settings_backend.cpp  settings_backend.hpp  setup_backend.cpp  setup_backend.hpp
src/OttqApp/i18n/: qml_de.ts  qml_en.ts
src/TimesTables/: CMakeLists.txt  quiz.cpp  quiz_settings.cpp
src/TtsModule/: CMakeLists.txt  quiz_translator.cpp  tts_settings.cpp
src/app/: CMakeLists.txt  Main.qml  QuizSettings.qml  QuizView.qml  SettingsView.qml  SetupView.qml  SetupViewSectionTitle.qml  backend.cpp  backend.hpp  factor_range.cpp  factor_range.hpp  language_list_model.cpp  language_list_model.hpp  language_name.hpp  question.cpp  question.hpp  quiz.cpp  quiz.hpp  quiz_backend.cpp  quiz_backend.hpp  quiz_config.cpp  quiz_config.hpp  quiz_configuration.cpp  quiz_configuration.hpp  quiz_state_machine.cpp  quiz_state_machine.hpp  self_updating_translator.cpp  self_updating_translator.hpp  settings_backend.cpp  settings_backend.hpp  setup_backend.cpp  setup_backend.hpp  tts_singleton.cpp  tts_singleton.hpp  tts_state_transition.hpp
src/app/i18n/: qml_de.ts  qml_en.ts
src/timestables/: CMakeLists.txt  copy_gettext_files.cmake  placeholder.cpp  quiz.cpp  quiz_settings.cpp
src/timestables/i18n/de/LC_MESSAGES/: de.po
src/timestables/i18n/en/LC_MESSAGES/: en.po
src/tts/: CMakeLists.txt  auto_locale.cpp  boost_translation_dir.cpp  boost_translator.cpp  locale_descriptor.cpp  qt_translator.cpp  quiz_translator.cpp  self_updating_translator.cpp  translation_resources.cpp  translator.cpp  translator_resources.cpp  translator_updater.cpp  tts_language_settings.cpp  tts_rate_settings.cpp  tts_settings.cpp
test/: CMakeLists.txt  auto_locale_test.cpp  placeholder_test.cpp  test_translator.hpp
test/tts/: CMakeLists.txt  auto_locale_test.cpp  from_filename_test.cpp  from_resourcepath_test.cpp  self_updating_translator_test.cpp  test_translation_resources.hpp  test_translator.hpp  test_tts_settings.hpp  translator_updater_test.cpp
